--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.1",
     "@react-navigation/stack": "^5.11.0",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
     "expo-splash-screen": "~0.6.2",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-svg": "12.1.0",
     "react-native-timeline-flatlist": "^0.7.3",
     "react-native-unimodules": "~0.11.0",
