--- a/app.json
+++ b/app.json
@@ -5,6 +5,12 @@
     "name": "github-timeline",
     "slug": "github-timeline",
     "version": "1.0.0",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
