--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-  "name": "github-timeline",
-  "displayName": "github-timeline",
   "expo": {
-    "name": "github-timeline",
+    "name": "GitHub Timeline",
     "slug": "github-timeline",
     "version": "1.0.0",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
@@ -17,18 +17,21 @@
     "packagerOpts": {
       "config": "metro.config.js",
       "sourceExts": [
-        "expo.ts",
-        "expo.tsx",
-        "expo.js",
-        "expo.jsx",
-        "ts",
-        "tsx",
-        "js",
-        "jsx",
-        "json",
-        "wasm",
         "svg"
       ]
+    },
+    "ios": {
+      "bundleIdentifier": "com.joaovitor.githubtimeline",
+      "buildNumber": "1.0.0",
+      "supportsTablet": true
+    },
+    "android": {
+      "package": "com.joaovitor.githubtimeline",
+      "versionCode": 1,
+      "backgroundColor": "#FFFFFF",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/icon.png"
+      }
     }
   }
 }
